# social-media-v1

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
apps/backend/: .env.example  alembic.ini  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 0001_initial.py  0002_email_pwd_resets.py  0002_email_verifications_password_resets.py  0003_user_totp.py  0004_audit_events.py  0005_brands_skills.py  0006_idempotency_keys.py  0007_billing_skeleton.py  0008_rls_policies.py  0009_tenant_limit_overrides.py  0010_channels_registry.py  0011_channel_post_embeddings.py  0012_telegram_userbot_sessions.py  0013_seed_plan_catalog.py  0014_audit_log_agent_runs_llm_calls.py  0015_brand_memory.py
apps/backend/app/: main.py
apps/backend/app/adapters/: __init__.py
apps/backend/app/adapters/llm/: __init__.py  base.py  circuit_breaker.py  factory.py  mock.py  polza.py  pricing.py
apps/backend/app/adapters/social/: __init__.py  telegram_bot.py
apps/backend/app/adapters/userbot/: __init__.py  base.py  mock.py  pool.py  pyrogram_client.py
apps/backend/app/agents/: __init__.py  base.py  healthcheck.py
apps/backend/app/api/: deps.py
apps/backend/app/api/middleware/: errors.py  idempotency.py
apps/backend/app/api/routes/: account.py  admin.py  auth.py  brand_memory.py  brands.py  channels.py  competitors.py  email_verifications.py  events.py  feature_flags.py  health.py  integrations.py  password_reset.py
apps/backend/app/cli/: __init__.py  healthcheck.py
apps/backend/app/core/: __init__.py  config.py  crypto.py  email.py  event_bus.py  feature_flags.py  i18n.py  logging.py  observability.py  redis.py  secrets.py  security.py  telemetry.py  translations.py
apps/backend/app/db/: __init__.py  base.py  rls.py  session.py
apps/backend/app/errors/: __init__.py
apps/backend/app/events/: __init__.py  schemas.py
apps/backend/app/integrations/telegram/: __init__.py  dispatcher.py  parsers.py
apps/backend/app/locales/en/: errors.json
apps/backend/app/locales/en/email/: _base.html.jinja  change_verification.html.jinja  change_verification.subject.jinja  change_verification.txt.jinja  email_changed.html.jinja  email_changed.subject.jinja  email_changed.txt.jinja  mfa_disabled.html.jinja  mfa_disabled.txt.jinja  mfa_enrolled.html.jinja  mfa_enrolled.txt.jinja  password_changed.html.jinja  password_changed.subject.jinja  password_changed.txt.jinja  password_reset.html.jinja  password_reset.txt.jinja  password_reset_done.html.jinja  password_reset_done.subject.jinja  password_reset_done.txt.jinja  signup.html.jinja  signup.subject.jinja  signup.txt.jinja
apps/backend/app/locales/ru/: errors.json
apps/backend/app/locales/ru/email/: _base.html.jinja  change_verification.html.jinja  change_verification.subject.jinja  change_verification.txt.jinja  email_changed.html.jinja  email_changed.subject.jinja  email_changed.txt.jinja  mfa_disabled.html.jinja  mfa_disabled.subject.jinja  mfa_disabled.txt.jinja  mfa_enrolled.html.jinja  mfa_enrolled.subject.jinja  mfa_enrolled.txt.jinja  password_changed.html.jinja  password_changed.subject.jinja  password_changed.txt.jinja  password_reset.html.jinja  password_reset.subject.jinja  password_reset.txt.jinja  password_reset_done.html.jinja  password_reset_done.txt.jinja  signup.html.jinja  signup.subject.jinja  signup.txt.jinja
apps/backend/app/models/: __init__.py  agent_run.py  audit_event.py  brand.py  brand_memory.py  channel.py  channel_post_embedding.py  email_verification.py  fx_rate.py  idempotency_key.py  invoice.py  llm_call.py  llm_call_daily.py  password_reset.py  plan.py  plan_price.py  refresh_token.py  telegram_userbot_session.py  tenant_limit_override.py  user.py  workspace.py  workspace_member.py
apps/backend/app/schemas/: account.py  admin.py  auth.py  billing.py  brand_memory.py  brands.py  channels.py  competitors.py  integrations.py
apps/backend/app/services/: admin_audit.py  agent_run_writer.py  audit.py  auth.py  brand_memory.py  brands.py  channel_history.py  channel_ingest.py  channels.py  competitors.py  dashboard.py  email_templates.py  email_verifications.py  embeddings.py  fx.py  memberships.py  memberships_cache.py  password_reset.py  refresh_tokens.py  sessions.py  totp.py  userbot_sessions.py  workspaces.py
apps/backend/app/services/billing/: plans.py  quotas.py  seed.py
apps/backend/app/skills/: __init__.py  compiler.py  dsl.py  manifest.py  registry.py  static_analysis.py
apps/backend/app/workers/: __init__.py  celery_app.py
apps/backend/app/workers/tasks/: __init__.py  channel_backfill.py  embed_channel_post.py  userbot_healthcheck.py
apps/backend/skills/content-agent-base/: SKILL.md
apps/backend/skills/prompt-injection-defender/: SKILL.md
apps/backend/tests/: conftest.py  test_account_management.py  test_admin_audit_endpoints.py  test_agent_run_writer.py  test_audit_events.py  test_base_and_healthcheck_agent.py  test_billing.py  test_brand_memory_api.py  test_brand_memory_service.py  test_brands_api.py  test_brands_service.py  test_channel_history_service.py  test_channel_ingest_service.py  test_channels_api.py  test_channels_backfill_api.py  test_channels_identifier_normalization.py  test_channels_service.py  test_check_timestamptz.py  test_circuit_breaker.py  test_competitors_api.py  test_competitors_service.py  test_crypto.py  test_dashboard_service.py  test_email_verification.py  test_embed_channel_post_task.py  test_embeddings_migration.py  test_embeddings_service.py  test_event_bus.py  test_events_schemas.py  test_events_ws.py  test_feature_flags.py  test_fx_service.py  test_i18n.py  test_idempotency.py  test_idempotency_middleware.py  test_integrations_webhook.py  test_llm_provider_mock.py  test_llm_provider_polza.py  test_login.py  test_logout_and_me.py  (+23 more)
apps/backend/tests/integration/: test_rls_isolation.py
apps/backend/tools/: check_system_prompt_lang.py  lint_set_local.py  validate_skills.py
docs/: 01-product-vision.md  02-target-audience.md  03-feature-scope.md  04-architecture.md  05-tech-stack.md  06-roadmap.md  (+1 more)
(+77 files in other folders)
