[project]
name = "social-media-backend"
version = "0.0.1"
description = "Backend API for social-media-v1 (AI Operating System for Social Networks)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.13.3",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.2.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.12",
    "redis>=5.2.0",
    "httpx>=0.27.2",
    "structlog>=24.4.0",
    "sentry-sdk[fastapi]>=2.17.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.9",
    "mypy>=1.11.2",
    "types-passlib>=1.7.7.20240819",
    "types-python-jose>=3.3.4.20240106",
    "aiosqlite>=0.20.0",
    "fakeredis>=2.26.0",
    "anyio>=4.6.0",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle, pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "N",             # pep8-naming
    "SIM",           # simplify
    "RUF",           # ruff-specific
]
ignore = [
    "E501",
    "B008",
    # Project is bilingual (RU primary, EN secondary). Cyrillic letters
    # inside Russian copy / comments are intentional, not look-alikes.
    "RUF001",
    "RUF003",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "N", "S"]
"alembic/env.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
exclude = ["alembic/versions"]

[[tool.mypy.overrides]]
module = ["passlib.*", "jose.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
