[project]
name = "social-media-backend"
version = "0.0.1"
description = "Backend API for social-media-v1 (AI Operating System for Social Networks)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.13.3",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==4.2.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.12",
    "redis>=5.2.0",
    "httpx>=0.27.2",
    "aiosmtplib>=3.0.2",
    "pyotp>=2.9.0",
    "structlog>=24.4.0",
    "sentry-sdk[fastapi]>=2.17.0",
    # PR #6 Skill infrastructure (D68 / D69 / D70 in docs/04 §20).
    "pydantic-yaml>=1.4",
    "python-frontmatter>=1.1",
    "tiktoken>=0.7",
    # docs/04 §20.4 + docs/03 §4 + docs/05 §3.4: ``matches`` operator
    # must use google-re2 for ReDoS-safety. We import ``re2`` lazily in
    # ``app.skills.dsl`` and fall back to stdlib ``re`` if the wheel is
    # missing on a given platform (CI on Linux ships the wheel out of
    # the box; the fallback also bounds input/pattern length).
    "google-re2>=1.1",
    # PR #9 (docs/04 §15, docs/05 §10.2): OpenTelemetry tracing + metrics.
    # All OTel imports are guarded by try/except so the app works
    # without these when OTEL_EXPORTER_OTLP_ENDPOINT is unset.
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.45b0",
    "opentelemetry-instrumentation-redis>=0.45b0",
    # PR #14 (docs/plans/phase1-sprint2-plan.md): Telegram Bot API
    # client. We only use the REST-call surface (``get_chat`` /
    # ``get_chat_member`` / ``get_chat_administrators``) in PR #14;
    # the Dispatcher / webhook plumbing lands in PR #16. The wrapper
    # imports aiogram lazily so unit tests that use
    # ``MockTelegramBotClient`` don't need the wheel.
    "aiogram>=3.13.0",
    # PR #15 (docs/plans/phase1-sprint2-plan.md): Celery async worker
    # for the channel history backfill job + future agent pipelines.
    # Redis is reused as broker + result backend (docs/05 §2.4). The
    # Celery app + task module live in ``app.workers``; production
    # ships a separate ``celery -A app.workers.celery_app worker``
    # container, dev runs ``make dev-worker``.
    "celery[redis]>=5.4.0",
    # PR #17 (docs/plans/phase1-sprint2-plan.md): pgvector ORM
    # bindings so SQLAlchemy can serialise/deserialise the
    # ``vector(1536)`` column. The :class:`Vector` ``TypeDecorator``
    # in ``app.models.channel_post_embedding`` falls back to JSON on
    # SQLite for tests, so this dependency is only required at
    # runtime when the dialect is Postgres.
    "pgvector>=0.3.0",
    # PR #18 (docs/plans/phase1-sprint2-plan.md): Fernet encryption
    # for the user-bot session pool (api_id / api_hash / session_string
    # stored encrypted at rest). The user-bot crawler itself (Pyrogram)
    # is wired in Sprint 3 alongside the BrandMemory ingestor — PR #18
    # only ships the contract + skeleton, so ``pyrogram`` is NOT a
    # production dependency yet.
    "cryptography>=42.0",
    # i18n / email rendering. Jinja2 powers the externalised email
    # templates in ``app/locales/{ru,en}/email/*.{subject,html,txt}.jinja``
    # so neither subject lines nor body copy are baked into Python
    # source — translators / marketing can iterate on the catalog
    # without a code release. Plain-text + HTML are rendered from
    # parallel templates so every transactional email goes out as
    # multipart/alternative (text fallback + HTML for clients that
    # support it).
    "jinja2>=3.1",
    # PR #20 (docs/plans/phase1-sprint3-plan.md): retry + circuit
    # breaker for the LLM gateway. ``tenacity`` drives the per-call
    # retry budget (jittered exponential backoff on transient
    # errors only); ``pybreaker`` arms the per-(provider, model)
    # circuit breaker whose state lives in Redis so every worker /
    # web instance reads the same "open / closed" signal.
    "tenacity>=9.0",
    "pybreaker>=1.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.9",
    "mypy>=1.11.2",
    "types-passlib>=1.7.7.20240819",
    "types-python-jose>=3.3.4.20240106",
    "aiosqlite>=0.20.0",
    "fakeredis>=2.26.0",
    "anyio>=4.6.0",
    # PR #20: ``respx`` mocks httpx requests (Polza gateway), and
    # ``freezegun`` freezes time for retry / circuit-breaker /
    # daily-aggregation tests.
    "respx>=0.21",
    "freezegun>=1.5",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle, pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "N",             # pep8-naming
    "SIM",           # simplify
    "RUF",           # ruff-specific
]
ignore = [
    "E501",
    "B008",
    # Project is bilingual (RU primary, EN secondary). Cyrillic letters
    # inside Russian copy / comments / docstrings are intentional, not look-alikes.
    "RUF001",
    "RUF002",
    "RUF003",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "N", "S"]
"alembic/env.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
exclude = ["alembic/versions"]

[[tool.mypy.overrides]]
module = [
    "passlib.*", "jose.*", "frontmatter.*", "tiktoken.*", "re2.*",
    "opentelemetry.*",
    "pybreaker.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "postgres: integration tests that require a real Postgres backend (skipped when DATABASE_URL points at sqlite)",
]
